basic styling added

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script defer src="./js/script.js"></script>
     <title>News</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>News Info</h1>
+<body id="body">
+    <h1 style="color: white; text-align: center; margin-top: 10%;">WHATS HAPPENING IN THE WORLD?</h1>
+    <div id="box">
     <main>
         <h3>Headline</h3>
         <p id="headline"></p>
-        <p>Image</p>
-        <img src="#" id="img">
+        <!-- <p>Image</p>
+        <img src="#" id="img"> -->
         <p>Description</p>
         <p id="description"></p>
         <p>Source</p>
@@ -24,6 +26,6 @@
         <input type="text" placeholder="Country" id="input"/>
         <input type="submit" value="Submit"/>
     </form>
-
+    </div>
 </body>
 </html>
