--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
-    <h1 style="color: white; text-align: center; margin-top: 10%;">WHATS HAPPENING IN THE WORLD?</h1>
+    <h1 style="color: white; text-align: center; margin-top: 10%; text-shadow: 2px 2px #FF0000; font-size: 4em;">WHATS HAPPENING IN THE WORLD?</h1>
     <div id="box">
     <main>
+        <p style="">Keep up with the top headlines across the globe.</p>
         <p id="headline"></p>
         <!-- <p>Image</p>
         <img src="#" id="img"> -->
