error message on screen for user to see

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <h1 style="color: white; text-align: center; margin-top: 10%; text-shadow: 2px 2px #FF0000; font-size: 4em;">WHATS HAPPENING IN THE WORLD?</h1>
     <div id="box">
     <main>
-        <p style="">Keep up with the top headlines across the globe.</p>
+        <h2>Keep up with the top headlines across the globe.</h2>
+        <br>
+        <p id="error"></p>
         <p id="headline"></p>
         <!-- <p>Image</p>
         <img src="#" id="img"> -->
         <p id="description"></p>
         <p id="source"></p>
-        <a href="#" id="more" target="_blank">More</a>
+        <a href="#" id="more" target="_blank"></a>
     </main>
     <form>
         <input type="text" placeholder="Country" id="input"/>
+
         <input type="submit" value="Submit"/>
     </form>
     </div>
