input changed from text to dropdown - working with JS and ajax

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
         <a href="#" id="more" target="_blank"></a>
     </main>
     <form>
-        <input type="text" placeholder="Country" id="input"/>
+        <!-- <input type="text" placeholder="Country" id="input"/> -->
+
+
+        <label for="country">Choose a Country:</label>
+        <select id="country" name="country">
+          <option value="us">USA</option>
+          <option value="uk">UK</option>
+          <option value="fr">FRANCE</option>
+          <option value="it">ITALY</option>
+        </select>
 
         <input type="submit" value="Submit"/>
     </form>
